
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef int yoml_t ;
struct TYPE_4__ {int * mimemap; } ;
typedef TYPE_1__ h2o_configurator_context_t ;
typedef int h2o_configurator_command_t ;


 int clone_mimemap_if_clean (TYPE_1__*) ;
 int set_mimetypes (int *,int ,int *) ;

__attribute__((used)) static int on_config_mime_addtypes(h2o_configurator_command_t *cmd, h2o_configurator_context_t *ctx, yoml_t *node)
{
    clone_mimemap_if_clean(ctx);
    return set_mimetypes(cmd, *ctx->mimemap, node);
}
